@@ -27,13 +27,13 @@ typedef struct BMP_HEADER
 
 
 /*:::::*/
-static int save_bmp(FB_GFXCTX *ctx, FILE *f, void *src, void *pal)
+static int save_bmp(FB_GFXCTX *ctx, FILE *f, void *src, void *pal, int outbpp)
 {
 	BMP_HEADER header;
 	PUT_HEADER *put_header;
-	int w, h, i, shift = 2, bfSize, biSizeImage, bfOffBits, biClrUsed, filler, bpp, pitch, color;
+	int w, h, i, bfSize, biSizeImage, bfOffBits, biClrUsed, inbpp, inpitch, outpitch, color;
 	unsigned char *s, *buffer, *p;
-	unsigned int *palette = (unsigned int *)pal;
+	unsigned int *palette = (unsigned int *)pal, *paltmp = 0;
 
 	if (src) {
 		put_header = (PUT_HEADER *)src;
@@ -41,47 +41,89 @@ static int save_bmp(FB_GFXCTX *ctx, FILE *f, void *src, void *pal)
 			w = put_header->width;
 			h = put_header->height;
 			s = (unsigned char *)src + sizeof(PUT_HEADER);
-			bpp = put_header->bpp;
-			pitch = put_header->pitch;
+			inbpp = put_header->bpp;
+			inpitch = put_header->pitch;
 		}
 		else {
 			w = put_header->old.width;
 			h = put_header->old.height;
 			s = (unsigned char *)src + 4;
-			bpp = (put_header->old.bpp ? put_header->old.bpp : __fb_gfx->bpp);
-			pitch = w * bpp;
+			inbpp = (put_header->old.bpp ? put_header->old.bpp : __fb_gfx->bpp);
+			inpitch = w * inbpp;
 		}
 	}
 	else {
 		w = __fb_gfx->w;
 		h = __fb_gfx->h;
 		s = ctx->line[0];
-		bpp = __fb_gfx->bpp;
-		pitch = __fb_gfx->pitch;
+		inbpp = __fb_gfx->bpp;
+		inpitch = __fb_gfx->pitch;
 	}
 
-	if (bpp == 1) {
-		biSizeImage = ( (w + 3) & ~3 ) * h;
-		bfOffBits = 54 + 1024;
+	if (w <= 0 || h <= 0 || s == 0 || inpitch < w * inbpp) {
+		/* Something wrong with the image header */
+		return FB_RTERROR_ILLEGALFUNCTIONCALL;
+	}
+	
+	switch (inbpp) {
+	case 1: /* 8-bit or 24-bit output (default to 8) */
+		if (outbpp > 8) {
+			outbpp = 24;
+		}
+		else {
+			outbpp = 8;
+		}
+		break;
+	case 2: /* 24-bit output only */
+		outbpp = 24;
+		break;
+	case 4: /* 24-bit or 32-bit output only (default to 32) */
+		if (outbpp != 24) {
+			outbpp = 32;
+		}
+		break;
+	default:
+		return FB_RTERROR_ILLEGALFUNCTIONCALL;
+	}
+
+	/* Change bits/pixel to bytes/pixel */
+	outbpp >>= 3;
+
+	switch (outbpp) {
+	case 1:
+		outpitch = ( (w + 3) & ~3 );
+		biSizeImage = outpitch * h;
+		bfOffBits = 54 + 256*4;
 		bfSize = bfOffBits + biSizeImage;
 		biClrUsed = 256;
-	}
-	else {
-		biSizeImage = ( ((w * 3) + 3) & ~3 ) * h;
+		break;
+	case 3:
+		outpitch = ( ((w * 3) + 3) & ~3 );
+		biSizeImage = outpitch * h;
 		bfOffBits = 54;
 		bfSize = bfOffBits + biSizeImage;
 		biClrUsed = 0;
+		break;
+	case 4:
+	default:
+		DBG_ASSERT(outbpp == 4);
+		outpitch = w * 4;
+		biSizeImage = outpitch * h;
+		bfOffBits = 54;
+		bfSize = bfOffBits + biSizeImage;
+		biClrUsed = 0;
+		break;
 	}
 
 	fb_hMemSet(&header, 0, sizeof(header));
-	header.bfType = 19778;
+	header.bfType = 0x4D42; /* 'B' 'M' */
 	header.bfSize = bfSize;
 	header.bfOffBits = bfOffBits;
 	header.biSize = 40;
 	header.biWidth = w;
 	header.biHeight = h;
 	header.biPlanes = 1;
-	header.biBitCount = (bpp == 1) ? 8 : 24;
+	header.biBitCount = outbpp * 8;
 	header.biSizeImage = biSizeImage;
 	header.biXPelsPerMeter = 0xB12;
 	header.biYPelsPerMeter = 0xB12;
@@ -89,38 +131,60 @@ static int save_bmp(FB_GFXCTX *ctx, FILE *f, void *src, void *pal)
 	header.biClrImportant = biClrUsed;
 	if (!fwrite(&header, 54, 1, f))
 		return FB_RTERROR_FILEIO;
-	if (bpp == 1) {
+
+	if (inbpp == 1) {
 		if (!pal) {
 			palette = __fb_gfx->device_palette;
-			shift = 0;
 		}
-		for (i = 0; i < 256; i++) {
-			fputc(((palette[i] >> 16) & 0xFF) << shift, f);
-			fputc(((palette[i] >> 8) & 0xFF) << shift, f);
-			fputc((palette[i] & 0xFF) << shift, f);
-			fputc(0, f);
+		else {
+			paltmp = (unsigned int *)calloc(sizeof(unsigned int), 256);
+			if (paltmp == 0) {
+				return FB_RTERROR_OUTOFMEM;
+			}
+			for (i = 0; i < 256; i++) {
+				paltmp[i] = (palette[i] & 0x3f0000) >> (16 - 2)
+				          | (palette[i] & 0x003f00) << 2
+				          | (palette[i] & 0x00003f) << (16 + 2);
+			}
+			palette = paltmp;
+		}
+
+		if (outbpp == 1) {
+			for (i = 0; i < 256; i++) {
+				fputc(((palette[i] >> 16) & 0xFF), f);
+				fputc(((palette[i] >> 8) & 0xFF), f);
+				fputc((palette[i] & 0xFF), f);
+				fputc(0, f);
+			}
 		}
 	}
 
-	switch (bpp) {
-		case 1:
-			filler = ( (w + 3) & ~3 );
-			break;
-		case 2:
-		case 4:
-			filler = ( ((w * 3) + 3) & ~3 );
-			break;
+	buffer = (unsigned char *)calloc(1, outpitch + 15);
+	if (buffer == 0) {
+		if (paltmp) free(paltmp);
+		return FB_RTERROR_OUTOFMEM;
 	}
-	buffer = (unsigned char *)calloc(1, filler + 15);
 
-	s += (h - 1) * pitch;
+	s += (h - 1) * inpitch;
 	for (; h; h--) {
 		p = buffer;
-		switch (bpp) {
+		switch (inbpp) {
 			case 1:
-				fb_hMemCpy(p, s, pitch);
+				if (outbpp == 1) {
+					fb_hMemCpy(p, s, inpitch);
+				}
+				else {
+					DBG_ASSERT(outbpp == 3);
+					for (i = 0; i < w; i++) {
+						color = palette[((unsigned char *)s)[i]];
+						*p++ = (color & 0xFF0000) >> 16;
+						*p++ = (color & 0xFF00) >> 8;
+						*p++ = (color & 0xFF);
+					}
+				}
 				break;
 			case 2:
+				DBG_ASSERT(outbpp == 3);
 				for (i = 0; i < w; i++) {
 					color = ((unsigned short *)s)[i];
 					*p++ = ((color & 0x001F) << 3) | ((color & 0x001F) >> 2);
@@ -129,25 +193,29 @@ static int save_bmp(FB_GFXCTX *ctx, FILE *f, void *src, void *pal)
 				}
 				break;
 			case 4:
+			default:
+				DBG_ASSERT(inbpp == 4);
+				DBG_ASSERT(outbpp == 3 || outbpp == 4);
 				for (i = 0; i < w; i++) {
 					*(unsigned int *)p = ((unsigned int *)s)[i];
-					p += 3;
+					p += outbpp;
 				}
 				break;
 		}
-		if (!fwrite(buffer, filler, 1, f))
+		if (!fwrite(buffer, outpitch, 1, f))
 			return FB_RTERROR_FILEIO;
-		s -= pitch;
+		s -= inpitch;
 	}
 
 	free(buffer);
+	if (paltmp) free(paltmp);
 
 	return fb_ErrorSetNum( FB_RTERROR_OK );
 }
 
 
 /*:::::*/
-FBCALL int fb_GfxBsave(FBSTRING *filename, void *src, unsigned int size, void *pal)
+FBCALL int fb_GfxBsaveEx(FBSTRING *filename, void *src, unsigned int size, void *pal, int bitsperpixel)
 {
 	FILE *f;
 	FB_GFXCTX *context = fb_hGetContext();
@@ -170,12 +238,12 @@ FBCALL int fb_GfxBsave(FBSTRING *filename, void *src, unsigned int size, void *p
 
 	p = strrchr(filename->data, '.');
 	if ((p) && (!strcasecmp(p + 1, "bmp")))
-		result = save_bmp(context, f, src, pal);
+		result = save_bmp(context, f, src, pal, bitsperpixel);
 	else {
 		if ((size == 0) && src) {
 			fclose(f);
 			fb_hStrDelTemp(filename);
-			return fb_ErrorSetNum( FB_RTERROR_FILENOTFOUND );
+			return fb_ErrorSetNum( FB_RTERROR_ILLEGALFUNCTIONCALL );
 		}
 
 		fputc(0xFE, f);
@@ -211,4 +279,11 @@ FBCALL int fb_GfxBsave(FBSTRING *filename, void *src, unsigned int size, void *p
 	fb_hStrDelTemp(filename);
 
 	return fb_ErrorSetNum( result );
+}
+
+
+/*:::::*/
+FBCALL int fb_GfxBsave(FBSTRING *filename, void *src, unsigned int size, void *pal)
+{
+	return fb_GfxBsaveEx(filename, src, size, pal, 0);
 }
